--- a/s3-pipeline-image/Dockerfile
+++ b/s3-pipeline-image/Dockerfile
@@ -2,6 +2,7 @@ FROM python:latest
 WORKDIR /pipeline
 
 COPY requirements.txt requirements.txt
+COPY config.py config.py
 COPY data_script.py data_script.py
 COPY zip_code_database.csv zip_code_database.csv
 COPY execute_script.sh execute_script.sh
