--- a/s3-pipeline-image/Dockerfile
+++ b/s3-pipeline-image/Dockerfile
@@ -4,11 +4,9 @@ WORKDIR /pipeline
 COPY requirements.txt requirements.txt
 COPY config.py config.py
 COPY data_script.py data_script.py
-COPY zip_code_database.csv zip_code_database.csv
-COPY execute_script.sh execute_script.sh
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN chmod +x execute_script.sh
+ENTRYPOINT ["python","data_script.py"]
 
-CMD ["./execute_script.sh"]
+CMD []
