--- a/s3-pipeline-image/requirements.txt
+++ b/s3-pipeline-image/requirements.txt
@@ -1,34 +1,17 @@
-aiobotocore>=2.5.0
-aiohttp>=3.8.4
-aioitertools>=0.11.0
-aiosignal>=1.3.1
-async-timeout>=4.0.2
-attrs>=23.1.0
-beautifulsoup4>=4.12.2
-botocore>=1.29.76
-bs4>=0.0.1
-certifi>=2023.5.7
-charset-normalizer>=3.1.0
-cramjam>=2.6.2
-frozenlist>=1.3.3
-fsspec>=2023.5.0
+boto3>=1.28.20
+botocore>=1.31.20
+certifi>=2023.7.22
+charset-normalizer>=3.2.0
+fsspec>=2023.6.0
 idna>=3.4
 jmespath>=1.0.1
-multidict>=6.0.4
-numpy>=1.24.3
-packaging>=23.1
-pandas>=2.0.1
-pyarrow>=12.0.0
-pyparsing>=3.0.9
+numpy>=1.25.2
+pandas>=2.0.3
 python-dateutil>=2.8.2
 pytz>=2023.3
-redfin-scraper>=0.2.2
 requests>=2.31.0
-s3fs>=2023.5.0
+s3fs>=0.4.2
+s3transfer>=0.6.1
 six>=1.16.0
-soupsieve>=2.4.1
-typing_extensions>=4.6.1
 tzdata>=2023.3
 urllib3>=1.26.16
-wrapt>=1.15.0
-yarl>=1.9.2
