--- a/pgsql-pipeline-image/Dockerfile
+++ b/pgsql-pipeline-image/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /pipeline
 COPY requirements.txt requirements.txt
 COPY config.py config.py
 COPY put_data.py put_data.py
+COPY conversion.json conversion.json
 COPY scripts scripts
 
 RUN pip install --no-cache-dir -r requirements.txt
